--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
     <header>
     	<h1>Expedition</h1>
     </header>
+    <aside>
+    	<p>
+    		Hope to become a senior developer
+    	</p>
+    </aside>
 </body>
 </html>
