--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script src="js/app.js"></script>
     <header>
-    	<h1>Adventure</h1>
+    	<h1>Adventure2</h1>
     	<div class="container">
     <main>
 
